--- a/adaptable.tex
+++ b/adaptable.tex
@@ -188,7 +188,7 @@ Global Change Information System}
     \frametitle{\insertsubsectionhead}
     Associations between GCIS identifiers and external terms.
     \begin{itemize}
-        \item GCIS identifier : /podaac/aqua
+        \item GCIS identifier : /platform/aqua
         \item PODAAC identifier : AQUA
         \item CEOS identifier : 206
     \end{itemize}
